--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <li>a b c c c</li>
         </ol>
         <p><a href="https://www.google.co.jp/imghp?hl=ja">Google画像検索</a>で見つけた写真は結局なかったことになった</p>
-        <p>ライセンスは問題なかったのだが、意味もなく不安になったので自身が撮った写真を使う</p>
+        <p>ライセンスは問題なかったのだが、意味もなく不安になったので自身が撮った写真を使う。<br>
+        これは最新のページ</p>
         <button>ユーザーを変更</button>
         <script src="scripts/main.js"></script>
     </body>
